--- a/test.yml
+++ b/test.yml
@@ -8,7 +8,7 @@ jobs:
   Hello-World-Job:
     runs-on:
 #      - codebuild-data-danderson-test-se-${{ github.run_id }}-${{ github.run_attempt }}
-      - codebuild-data-danderson-test-${{ github.run_id }}-${{ github.run_attempt }}
+      - codebuild-test-run-${{ github.run_id }}-${{ github.run_attempt }}
     steps:
       - run: |
          echo "Hello World!"
